common-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-service-app
  labels:
    app: common-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app : common-service-app
  template:
    metadata:
      labels:
        app: common-service-app
    spec:
      containers:
      - name: common-service-app
        image: acrqspuat.azurecr.io/common-service-dev.git:51
        imagePullPolicy: Always
        ports:
          - containerPort: 9003

---

apiVersion: v1
kind: Service
metadata:
  name: common-service-svc
spec:
  selector:
    app: common-service-app
  ports:
  - port: 80
    targetPort:  9003
