transaction-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service-app
  labels:
    app: transaction-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app : transaction-service-app
  template:
    metadata:
      labels:
        app: transaction-service-app
    spec:
      containers:
      - name: transaction-service-app
        image: acrqspuat.azurecr.io/transacation-service-dev.git:50
        imagePullPolicy: Always
        ports:
          - containerPort: 9001

---

apiVersion: v1
kind: Service
metadata:
  name: transaction-service-svc
spec:
  selector:
    app: transaction-service-app
  ports:
  - port: 80
    targetPort:  9001
