user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-app
  labels:
    app: user-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app : user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      containers:
      - name: user-service-app
        image: acrqspuat.azurecr.io/user-service-dev.git:48
        imagePullPolicy: Always
        ports:
          - containerPort: 9002

---

apiVersion: v1
kind: Service
metadata:
  name:  user-service-svc
spec:
  selector:
    app:  user-service-app
  ports:
  - port:  80
    targetPort:  9002
