app-ingress.yml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cloud-gateway-svc
          servicePort: 9191
        path: /cloud-gateway-app(/|$)(.*)
  - host: apionequessuat.quesscorp.com # change the IP address here
    http:
      paths:
      - backend:
          serviceName: cloud-gateway-svc
          servicePort: 9191
        path: /cloud-gateway-app
