tls-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
      - apionequessuat.quesscorp.com
      secretName: nginx-cert
  rules:
    - host: apionequessuat.quesscorp.com
      http:
        paths:
          - backend:
              service:
                name: cloud-gateway-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
